<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/purple_700"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">
            
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivUserImage"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"/>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/PreTextView"
                android:textColor="@color/black"
                android:text="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/ivUserImage"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                style="@style/PreTextView"
                android:textColor="@color/grey"
                android:text="Forum shah"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/black"
                android:text="@string/gender"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/grey"
                android:text="Female"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvGender"
                app:layout_constraintTop_toBottomOf="@+id/tvName"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/black"
                android:text="@string/dob"
                app:layout_constraintTop_toBottomOf="@+id/tvGender"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserDob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/grey"
                android:text="06/12/1994"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDob"
                app:layout_constraintTop_toBottomOf="@+id/tvGender"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/black"
                android:text="@string/age"
                app:layout_constraintTop_toBottomOf="@+id/tvDob"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/grey"
                android:text="@string/age_yrs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAge"
                app:layout_constraintTop_toBottomOf="@+id/tvDob"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/black"
                android:text="@string/lives_in"
                app:layout_constraintTop_toBottomOf="@+id/tvAge"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                style="@style/PreTextView"
                android:textColor="@color/grey"
                android:text="@string/city_state_country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvLocation"
                app:layout_constraintTop_toBottomOf="@+id/tvAge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvAccept"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="30dp"
                    app:cardBackgroundColor="@color/green"
                    android:layout_weight="1"
                    android:layout_marginVertical="5dp"
                    android:layout_marginEnd="5dp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/PreTextView"
                        app:textAllCaps="true"
                        android:text="@string/accept"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvDecline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="30dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/red"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/PreTextView"
                        app:textAllCaps="true"
                        android:text="@string/decline"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvMessage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="45dp"
                app:strokeWidth="0.5dp"
                android:visibility="gone"
                app:strokeColor="@color/purple_700"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PreTextView"
                    app:textAllCaps="true"
                    android:text="Member Accepted"
                    android:layout_gravity="center"
                    android:textColor="@color/green"/>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>